fix: adjust menu to use a box shadow instead of a drop shadow as it was being clipped, clean up classes

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
   --color-th-yw: oklch(78.28% 0.168 66.2);
   --color-th-lb: oklch(61.67% 0.147 242.18);
 
-  --drop-shadow-menu: -20px -16px 0 rgb(247, 23, 53);
+  --box-shadow-menu: -20px -16px 0 rgb(247, 23, 53);
   --drop-shadow-title: -10px -6px 0 rgb(247, 23, 53);
   --drop-shadow-menu-item: -4px -2px 0 rgb(247, 23, 53);
   --drop-shadow-app: 0px 0px 20px rgb(23, 23, 22);
@@ -71,4 +71,19 @@
 
 .animate-fade-in-staggered {
   animation: fade-in 0.6s ease-out calc(1.1s + var(--delay, 0s)) both;
+}
+
+@keyframes roll-in {
+  0% {
+    transform: translateX(-100%) rotate(-180deg);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0) rotate(0deg);
+    opacity: 1;
+  }
+}
+
+.animate-roll-in {
+  animation: roll-in 1s ease-out calc(1.1s + var(--delay, 0s)) both;
 }
